# ai-book-batch-writer

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  SECURITY.md  build_windows.bat  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
data/: README.md  languages_en.json
examples/: example_project.json
locales/: README.md  en.json  es.json
src/ai_book_batch_writer/: __init__.py  app.py  config.py  exporters.py  generation_service.py  i18n.py  input_validation.py  json_utils.py  language_catalog.py  llm_providers.py  logging_config.py  main.py  model_catalog.py  models.py  project_index.py  project_store.py  prompts.py  provider_discovery.py  settings_store.py  token_utils.py  utils.py
tests/: conftest.py  test_exporters.py  test_generation_service.py  test_i18n.py  test_input_validation.py  test_json_utils.py  test_language_catalog.py  test_llm_providers.py  test_model_catalog.py  test_project_index.py  test_project_store.py  test_prompt_building.py  test_provider_discovery.py  test_token_utils.py  test_utils.py
