[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-book-batch-writer"
version = "0.2.0"
description = "Desktop application for outline-first, chapter-by-chapter long-form writing with LangChain."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "AI Book Batch Writer contributors" }
]
keywords = ["ai", "langchain", "openai", "ollama", "desktop", "writing"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Win32 (MS Windows)",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "customtkinter>=5.2,<6",
  "langchain>=1.2,<2",
  "langchain-core>=1.2,<2",
  "langchain-anthropic>=1.3,<2",
  "langchain-google-genai>=4,<5",
  "langchain-openai>=1.1,<2",
  "langchain-ollama>=1.0,<2",
  "langchain-openrouter>=0.2,<1",
  "pydantic>=2.10,<3",
  "python-dotenv>=1.0,<2",
  "python-docx>=1.1,<2",
  "tenacity>=9,<10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "pyinstaller>=6.11,<7",
]

[project.scripts]
ai-book-batch-writer = "ai_book_batch_writer.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.data-files]
locales = [
  "locales/en.json",
  "locales/es.json",
  "locales/README.md",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
